Fixes list calls.
